--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <div class="background"></div>
     <div class="content">
       <h1>Celebrate Our 25th Wedding Anniversary!</h1>
       <p>You are cordially invited to join us in celebrating our 25 years of love, laughter, and togetherness.</p>
