--- a/index.html
+++ b/index.html
@@ -12,22 +12,13 @@
     <div class="content">
       <h1>Celebrate Our 25th Wedding Anniversary!</h1>
       <p>You are cordially invited to join us in celebrating our 25 years of love, laughter, and togetherness.</p>
-      <p>Date: [Date]</p>
-      <p>Time: [Time]</p>
-      <p>Location: [Location]</p>
-      <button onclick="showRSVPForm()">RSVP</button>
-    </div>
-    <div class="rsvp-form" id="rsvpForm">
-      <h2>RSVP</h2>
-      <form>
-        <label for="name">Your Name:</label><br>
-        <input type="text" id="name" name="name" required><br>
-        <label for="email">Your Email:</label><br>
-        <input type="email" id="email" name="email" required><br>
-        <button type="submit">Submit</button>
-      </form>
+      <p>Date: 20th June, 2024</p>
+      <p>Time: 7pm onwards</p>
+      <p>Location: <a href="https://maps.app.goo.gl/ZuiRBb9C9DThjsxS7" target="_blank">[Precious Forever Banquets]</a></p>
+      <button onclick="toggleMusic()">Play Music</button>
     </div>
   </div>
+  <audio id="backgroundMusic" src="music.mp3" loop></audio>
   
   <script src="script.js"></script>
 </body>
