--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button onclick="toggleMusic()">Play Music</button>
     </div>
   </div>
-  <audio id="backgroundMusic" src="music.mp3" loop></audio>
+  <audio id="backgroundMusic" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" loop></audio>
   
   <script src="script.js"></script>
 </body>
